@@ -1,20 +1,28 @@
+/*
+ * Copyright (c) 2022 - present. New Relic Corporation. All rights reserved.
+ * SPDX-License-Identifier: Apache-2.0
+ */
+
 import com.android.builder.core.BuilderConstants
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-    }
+plugins {
+    id("com.github.johnrengelman.shadow")
+    id("com.android.library")
 }
-
-
-apply plugin: 'com.android.library'
 
 version = project.versions.agent
 archivesBaseName = "android-agent"
 
+tasks.withType(JavaExec).configureEach {
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+        jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens=java.base/java.util=ALL-UNNAMED"])
+    }
+}
+
 android {
+    namespace "com.newrelic.agent.android"
     compileSdkVersion project.versions.agp.compileSdk
 
     defaultConfig {
@@ -26,6 +34,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules.pro'
         }
     }
 
@@ -42,37 +51,62 @@ android {
     }
 
     testOptions {
-        unitTests.includeAndroidResources = true
-        unitTests.returnDefaultValues = true
-        unitTests.all {
-            forkEvery = 1
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+            all {
+                forkEvery = 1
+            }
         }
     }
 
     libraryVariants.all { variant ->
-        // The artifact is now a fat jar
         logger.info("[FAT-JAR] Variant[${variant.name}]")
-        variant.ext.fatJarTask = toFatJarTask(variant)
+        variant.ext.fatJarProvider = toFatJarTask(variant)
         artifacts {
-            archives variant.ext.fatJarTask
+            // The artifact is a fat jar
+            archives variant.ext.fatJarProvider
         }
 
-        /**
-         * Set dependencies
-         */
-        def assembleTask = variant.getAssembleProvider().get()
-        fatJarTask.dependsOn assembleTask
-        assembleTask.finalizedBy variant.ext.fatJarTask
+        def assembleTask = variant.getAssembleProvider()
+        fatJarProvider.configure {
+            dependsOn assembleTask
+        }
+        assembleTask.configure {
+            finalizedBy variant.ext.fatJarProvider
+        }
     }
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: '*.jar')
+/*
+androidComponents {
+    onVariants(selector().withBuildType("release")) { variant ->
+        logger.info("[FAT-JAR] Variant[${variant.name}]")
+        variant.ext.fatJarProvider = toFatJarTask(variant)
+        artifacts {
+            // The artifact is a fat jar
+            archives variant.ext.fatJarProvider
+        }
 
-    compileOnly project(path: ':agent-core', configuration: 'fat')
+        def assembleTask = project.tasks.named("assemble") {
+            dependsOn variant.ext.fatJarProvider
+        }
+
+        fatJarProvider.configure {
+            finalizedBy assembleTask
+        }
+    }
+}
+/**/
+
+dependencies {
+    implementation project(path: ':agent-core', configuration: 'fat')
+
+    compileOnly fileTree(dir: 'libs', include: '*.jar')
     compileOnly newrelic.deps.ndk
 
     testImplementation project(path: ':agent-core', configuration: 'fat')
+    testImplementation fileTree(dir: 'libs', include: '*.jar')
     testImplementation newrelic.deps.ndk
 
     testImplementation 'org.robolectric:robolectric:' + project.versions.test.robolectric
@@ -82,24 +116,45 @@ dependencies {
 }
 
 /**
- * Returns path to *fat* agent-core
+ * Finalize android-agent.jar for the passed variant
  */
-def agentCoreJarPath() {
-    configurations.releaseCompileClasspath.find { c -> c.absolutePath.contains("agent-core-$version-fat") }
-}
 
-/**
- * Finalize agent.jar for the passed variant
- */
 def toFatJarTask(def variant) {
-    def variantName = variant.name.toLowerCase()
-    def fatJarFile = "android-agent-${project.version}.jar"
+    def unshadedJarProvider = project.tasks.register("unshadedJar${variant.name.capitalize()}", Jar) {
+        dependsOn variant.runtimeConfiguration
+        dependsOn variant.getJavaCompileProvider()
+        archiveClassifier = "u"
+        include("**/GsonInstrumentation*")
+        from variant.getJavaCompileProvider().get().destinationDir
+        from {
+            variant.runtimeConfiguration.collect { it.isDirectory() ? it : zipTree(it) }
+        }
+    }
 
-    // This task will merge agent and agent-core classes, relocating embedded 3rd-party classes.
-    // ShadowJar doesn't support Android so use JarJar until that's resolved
+    def shadedJarProvider = project.tasks.register("shadedJar${variant.name.capitalize()}", ShadowJar) {
+        dependsOn variant.runtimeConfiguration
+        dependsOn variant.getJavaCompileProvider()
+        archiveClassifier = "s"
+        from variant.getJavaCompileProvider().get().destinationDir
+        from {
+            variant.runtimeConfiguration.collect { it.isDirectory() ? it : zipTree(it) }
+        }
+        exclude '**/META-INF/**'
+        exclude(unshadedJarProvider.get().includes)
+        relocate("com.google.gson", "com.newrelic.com.google.gson") {
+            // FIXME: Shadow does not exclude! This breaks Gson instrumentation.
+            //  It's why we have to merge an unshaded and shaded jar below
+            exclude("com.newrelic.agent.android.instrumentation.GsonInstrumentation")
+        }
+        relocate("com.google.flatbuffers", "com.newrelic.com.google.flatbuffers")
+        mergeServiceFiles()
+    }
 
-    def fatJarTaskName = "fatJar${variantName.capitalize()}"
-    def fatJarTask = task(fatJarTaskName, type: Jar) {
+    def fatJarProvider = project.tasks.register("fatJar${variant.name.capitalize()}", Jar) {
+        dependsOn unshadedJarProvider
+        dependsOn shadedJarProvider
+        archiveClassifier = ""
+        includeEmptyDirs = false
         manifest {
             attributes(
                     "Implementation-Vendor": "New Relic Inc.",
@@ -112,43 +167,14 @@ def toFatJarTask(def variant) {
                 into "proguard"
             }
         }
-
-        exclude 'META-INF/**'
-
-        doLast {
-            /**
-             * Create a combined agent jar
-             */
-            def fatjarOutputFile = new File("${project.projectLibsDir}/${fatJarFile}").getCanonicalFile()
-            def agentCoreJarPath = agentCoreJarPath()
-            def compileTask = variant.getJavaCompileProvider().get()
-
-            logger.lifecycle "[newrelic] [agent] Agent fat jar: ${fatjarOutputFile}"
-            logger.info "[newrelic] [agent] Agent core dependency: ${agentCoreJarPath}"
-
-            ant {
-                taskdef name: 'jarjar', classname: 'com.tonicsystems.jarjar.JarJarTask', classpath: "${projectDir}/jarjar-1.4.jar"
-
-                // Combine shadowed dependencies
-                jarjar(jarfile: fatjarOutputFile, manifest: "$buildDir/tmp/${fatJarTaskName}/MANIFEST.MF") {
-                    fileset(dir: compileTask.destinationDir)
-                    zipfileset(src: agentCoreJarPath) {
-                        exclude(name: '**/GsonInstrumentation.*')
-                    }
-                    rule pattern: "com.google.**", result: "com.newrelic.com.google.@1"
-                }
-
-                // Insert unshadowed file(s) into target
-                jar(destfile: fatjarOutputFile, update: "true", compress: "true", duplicate: "fail") {
-                    zipfileset(src: agentCoreJarPath) {
-                        include(name: '**/GsonInstrumentation.*')
-                    }
-                }
-            }
-        }
+        exclude '**/META-INF/**'
+        exclude '**/module-info.class'
+        duplicatesStrategy = DuplicatesStrategy.INHERIT
+        from unshadedJarProvider.get().outputs.files.collect { it.isDirectory() ? it : zipTree(it) }
+        from shadedJarProvider.get().outputs.files.collect { it.isDirectory() ? it : zipTree(it) }
     }
 
-    return fatJarTask
+    fatJarProvider
 }
 
 /**
@@ -160,7 +186,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             android.libraryVariants.all { variant ->
-                artifact variant.ext.fatJarTask
+                artifact variant.ext.fatJarProvider
             }
             artifactId 'android-agent'
             pom {
